--- a/Week1/sql.ipynb
+++ b/Week1/sql.ipynb
@@ -26,6 +26,15 @@
         "<a href=\"https://colab.research.google.com/github/nandini-gangrade/Data-Engineering-Hexaware/blob/Project/Week1/sql.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
+   {
+      "cell_type": "markdown",
+      "source": [
+        "# Week 1: Data Warehousing and SQL Concepts"
+      ],
+      "metadata": {
+        "id": "2KFjbBXQewtZ"
+      }
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
