--- a/Week4/Azure_Databricks.ipynb
+++ b/Week4/Azure_Databricks.ipynb
@@ -59,7 +59,7 @@
         "    (2001, 'Shruti', 'India'),\n",
         "    (2002, 'Priyanshi', 'Canada'),\n",
         "    (2003, 'Prakhar', 'New York'),\n",
-        "    (2004, 'Nandini', 'USA'),\n",
+        "    (2004, 'Shreya', 'USA'),\n",
         "    (2005, 'Divya', 'Australia')\n",
         "]\n",
         "\n",
